comments endpoint bug fix + docs done
